@@ -2090,13 +2090,22 @@ proc tcltest::test {name description args} {
     }	
     puts [outputChannel] "\n"
     if {[IsVerbose line]} {
-	set testFile [file normalize [uplevel 1 {info script}]]
-	if {[file readable $testFile]} {
-	    set testFd [open $testFile r]
-	    set lineNo [expr {[lsearch -regexp [split [read $testFd] "\n"] \
-		    "^\[ \t\]*test [string map {. \\.} $name] "]+1}]
-	    close $testFd
-	    puts [outputChannel] "$testFile:$lineNo: test failed:\
+	if {![catch {set testFrame [info frame -1]}] &&
+		[dict get $testFrame type] eq "source"} {
+	    set testFile [dict get $testFrame file]
+	    set testLine [dict get $testFrame line]
+	} else {
+	    set testFile [file normalize [uplevel 1 {info script}]]
+	    if {[file readable $testFile]} {
+		set testFd [open $testFile r]
+		set testLine [expr {[lsearch -regexp \
+			[split [read $testFd] "\n"] \
+			"^\[ \t\]*test [string map {. \\.} $name] "]+1}]
+		close $testFd
+	    }
+	}
+	if {[info exists testLine]} {
+	    puts [outputChannel] "$testFile:$testLine: test failed:\
 		    $name [string trim $description]"
 	}
     }	
