@@ -1,3 +1,7 @@
+2006-12-08  Daniel Steffen  <das@users.sourceforge.net>
+
+	* library/tcltest/tcltest.tcl: use [info frame] for "-verbose line".
+
 2006-12-07  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCompCmds.c:	Additional commits correct most
@@ -193,8 +197,8 @@
 
 2006-11-26  Daniel Steffen  <das@users.sourceforge.net>
 
-	* tcl.m4 (Linux): --enable-64bit support. [Patch 1597389] [Bug 1230558]
-	* configure: autoconf-2.59
+	* unix/tcl.m4 (Linux): --enable-64bit support.	[Patch 1597389]
+	* unix/configure: autoconf-2.59			[Bug 1230558]
 
 2006-11-25  Donal K. Fellows  <dkf@users.sf.net>
 
